Fix alignment middle tryptich

--- a/site/sass/parts/_triptych.scss
+++ b/site/sass/parts/_triptych.scss
@@ -69,9 +69,11 @@
     min-height: 100vh;
 
     article {
-      padding-top: 32rem;
-
       min-height: inherit;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     &:hover article {
